# embassy-2181

./: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml
scripts/: .gitignore  panic.py
src/: main.rs
